--- a/CSS/style.css
+++ b/CSS/style.css
@@ -40,6 +40,7 @@
 }
 
 .nav-links {
+  color: #000000;
   margin-right: 51px;
   letter-spacing: 0.2px;
 }
@@ -290,4 +291,57 @@
 .footer-text {
   font-family: "Roboto", sans-serif;
   color: white;
+}
+
+/* Creating Modal */
+
+.close-modal {
+  position: absolute;
+  top: 1.2rem;
+  right: 2rem;
+  font-size: 5rem;
+  color: #333;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+.modal__title {
+  font-size: 2.5rem;
+  text-align: center;
+}
+
+/* -------------------------- */
+/* CLASSES TO MAKE MODAL WORK */
+.hidden {
+  display: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+
+  background-color: white;
+  padding: 6rem;
+  border-radius: 5px;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+  z-index: 10;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(5px);
+  z-index: 5;
+}
+
+.disableScroll {
+  overflow-y: hidden;
 }
