--- a/CSS/style.css
+++ b/CSS/style.css
@@ -43,8 +43,11 @@
   color: #000000;
   margin-right: 51px;
   letter-spacing: 0.2px;
+  transition: all 0.3s;
 }
-
+.website-logo {
+  transition: all 0.3s;
+}
 .resetMargin {
   margin: 0px;
 }
@@ -59,6 +62,7 @@
   box-shadow: 0px 4px 31px rgba(0, 0, 0, 0.15);
   width: 158px;
   height: 52px;
+  transition: all 0.3s;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -89,6 +93,12 @@
   -ms-flex-align: center;
   align-items: center;
 }
+.sticky {
+  position: fixed;
+  top: 0;
+  transition: all 0.3s;
+}
+
 .texts-block {
   width: 526px;
 }
